--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Netflix Cloning</title>
+    <title>Netflix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
